[package]
name = "shared_arena"
version = "0.1.0"
authors = ["Sebastien Chapuis <sebastien@chapu.is>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
bench = false

[profile.bench]
debug = true

[profile.release]
debug = true

[dev-dependencies]
criterion = { git = "git://github.com/bheisler/criterion.rs" }

[[bench]]
name = "mempool"
harness = false

[dependencies]
static_assertions = "1"
