[package]
name = "shared_arena"
version = "0.1.0"
authors = ["Sebastien Chapuis <sebastien@chapu.is>"]
edition = "2018"
license = "MIT"
description = "A thread-safe & efficient memory pool "
repository = "https://github.com/sebastiencs/shared-arena"
homepage = "https://github.com/sebastiencs/shared-arena"
keywords = ["memory", "pool", "thread"]
categories = ["memory-management", "concurrency"]
readme = "README.md"
include = [
    "**/*.rs",
    "Cargo.toml",
    "README.md"
]

[badges]
codecov = { repository = "sebastiencs/shared-arena" }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
bench = false

[dependencies]
static_assertions = "1"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "mempool"
harness = false
